syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "threat-intel-core/api/proto/services";

// protoc --go_out=../services --go_opt=paths=source_relative --go-grpc_out=../services --go-grpc_opt=paths=source_relative fleet.proto

message FleetQueryFilter {
  bool ActiveOnly = 1;
  repeated BotType ShowTypes = 2;

  optional string ClusterUUID = 3;
}

// Fleet describes all bots and coordinators in a system
message Fleet {
  repeated Bot Bots = 1;
  repeated Collector Collectors = 2;
  repeated Cluster Clusters = 3;
}

message Bot {
  string Identity = 1;
  BotType Type = 2;

  BotState State = 3;

  uint64 ClusterID = 4;

  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp LastCheckAt = 6;
}

message BotState {
  bool IsActive = 1;
  bool IsBusy = 2;

  optional string CurrentScanOption = 3;

  uint64 TasksLeft = 4;
}

message BotToken {
  string JWT = 1;
}

enum BotType {
  BOT_PING = 0;
}

message Collector {
  string Identity = 1;
  bool IsActive = 3;
}

message Cluster {
  optional uint64 ID = 1;

  string Name = 2;
  string Description = 3;
  bool IsActive = 4;

  optional BotToken Token = 5;

  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}